Fix bubbles from the top to avoid distracting jumps

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -290,10 +290,10 @@ header[role="banner"] {
   }
 
   .gu-content__bg {
-    bottom: 0;
     height: 580px;
     left: 0;
     position: absolute;
+    top: 245px;
     width: 100%;
     z-index: -1;
   }
